--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -41,7 +41,7 @@ jobs:
         env:
           CI: true
 
-Build-and-Push-Docker-Image:
+build-and-push-image:
     runs-on: ubuntu-latest
     needs: test
     name: Docker build, tag, push
