--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -45,7 +45,10 @@ jobs:
       runs-on: ubuntu-latest
       needs: test
       name: Docker build, tag, push
-
+      permissions:
+        contents: read
+        packages: write
+      
       steps:
       - name: Checkout
         uses: actions/checkout@v2
