--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -40,28 +40,26 @@ jobs:
           npm test
         env:
           CI: true
-
-  build-and-push-docker-image:
-      runs-on: ubuntu-latest
-      needs: test
-      name: Docker build, tag, push
-      permissions:
-        contents: read
-        packages: write
-      
-      steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: Download built artifact
-        uses: actions/download-artifact@main
-        with:
-          name: webpack artifacts
-          path: public
-      - name: Build container image
-        uses: docker/build-push-action@v2
-        with:
-          username: ${{github.actor}}
-          password: ${{secrets.GUTHUB_TOKEN}}
-          registry: docker.pkg.github.com
-          repository: Justen-LYIT/devops-p8/tic-tac-toe
-          tag_with_sha: true
+          
+  Build-and-Push-Docker-Image:
+    runs-on: ubuntu-latest
+    needs: test
+    name: Docker Build, Tag, Push
+    
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v1
+    - name: Download build artifact
+      uses: actions/download-artifact@main
+      with:
+        name: webpack artifacts
+        path: public
+    - name: Build container image
+      uses: docker/build-push-action@v1
+      with:
+        username: ${{github.actor}}
+        password: ${{secrets.PAT_TOKEN}}
+        registry: docker.pkg.github.com
+        repository: Justen-LYIT/devops-p8/tic-tac-toe
+        tag_with_sha: true
+    
