--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -51,14 +51,14 @@ jobs:
     
     steps:
     - name: Checkout
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
     - name: Download build artifact
-      uses: actions/download-artifact@main
+    - uses: actions/download-artifact@master
       with:
         name: webpack artifacts
         path: public
     - name: Build container image
-      uses: docker/build-push-action@v2
+      uses: docker/build-push-action@v3
       with:
         username: ${{github.actor}}
         password: ${{secrets.GITHUB_TOKEN}}
