--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -53,7 +53,7 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v3
     - name: Download build artifact
-    - uses: actions/download-artifact@master
+    - uses: actions/download-artifact@main
       with:
         name: webpack artifacts
         path: public
