--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -53,7 +53,7 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v3
     - name: Download build artifact
-    - uses: actions/download-artifact@main
+      uses: actions/download-artifact@main
       with:
         name: webpack artifacts
         path: public
@@ -65,4 +65,3 @@ jobs:
         registry: docker.pkg.github.com
         repository: justen-lyit/devops-p8/tic-tac-toe
         tag_with_sha: true
-    
