--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v2
       - name: npm install and build webpack
         run: |
           npm install
@@ -25,9 +25,9 @@ jobs:
         node-version: [12.x, 14.x]
 
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v2
       - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
       - uses: actions/download-artifact@master
@@ -44,24 +44,23 @@ jobs:
   Build-and-Push-Docker-Image:
     runs-on: ubuntu-latest
     needs: test
-    permissions:
-      contents: read
-      packages: write
     name: Docker Build, Tag, Push
     
     steps:
     - name: Checkout
-      uses: actions/checkout@v3
+      uses: actions/checkout@v1
     - name: Download build artifact
       uses: actions/download-artifact@main
       with:
         name: webpack artifacts
         path: public
     - name: Build container image
-      uses: docker/build-push-action@v3
+      uses: docker/build-push-action@v1
       with:
         username: ${{github.actor}}
-        password: ${{secrets.GITHUB_TOKEN}}
+        password: ${{secrets.PAT_TOKEN}}
         registry: docker.pkg.github.com
-        repository: justen-lyit/devops-p8/tic-tac-toe
+        repository: justen-lyit/devops-p8/tic-tac-toe2
         tag_with_sha: true
+    
+    
