--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -25,7 +25,7 @@ jobs:
         node-version: [12.x, 14.x]
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v1
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v2
         with:
@@ -41,24 +41,36 @@ jobs:
         env:
           CI: true
           
+  
   Build-and-Push-Docker-Image:
-    runs-on: ubuntu-latest
-    needs: test
-    name: Docker Build, Tag, Push
-    
-    steps:
-    - name: Checkout
-      uses: actions/checkout@v1
-    - name: Download build artifact
-      uses: actions/download-artifact@main
-      with:
-        name: webpack artifacts
-        path: public
-    - name: Build container image
-      uses: docker/build-push-action@v1
-      with:
-        username: ${{github.actor}}
-        password: ${{secrets.PAT_TOKEN}}
-        registry: docker.pkg.github.com
-        repository: justen-lyit/devops-p8/tic-tac-toe2
-        tag_with_sha: true
+   runs-on: ubuntu-latest
+   needs: test
+   name: Docker Build, tag, push
+   permissions:
+      contents: read
+      packages: write
+   
+   steps:  
+   - name: Checkout
+     uses: actions/checkout@v1
+     
+   - name: Login to DockerHub
+     uses: docker/login-action@v1
+     with:
+       username: ${{ secrets.DOCKERHUB_USERNAME }}
+       password: ${{ secrets.DOCKERHUB_TOKEN }}
+ 
+   - name: Download build artifact
+     uses: actions/download-artifact@main
+     with:
+      name: webpack artifacts
+      path: public
+      
+   - name: Build container image
+     uses: docker/build-push-action@v2
+     with:
+      username: ${{github.actor}}  
+      password: ${{ secrets.DOCKERHUB_TOKEN }}
+      registry: docker.pkg.github.com
+      repository: justen-lyit/devops-p8/tic-tac-toe2
+      tag_with_sha: true
